# newfan_analysis

./: README.md
newfan_analysis/: Dockerfile  docker-compose.yaml  pyproject.toml
newfan_analysis/api/: main.py
newfan_analysis/api/kpi_tree/: calc_indicator.py  function.py
